--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "finpar/customers-module",
+    "name": "hds-solutions/customers-module",
     "description": "Customers module",
     "type": "laravel-module",
     "license": "GNU GPLv3",
@@ -12,12 +12,12 @@
     "minimum-stability": "dev",
     "require": {
         "php": "^8.0",
-        "finpar/backend-module": "dev-develop"
+        "hds-solutions/backend-module": "dev-develop"
     },
     "autoload": {
         "psr-4": {
-            "HDSSolutions\\Finpar\\": "app/",
-            "HDSSolutions\\Finpar\\Seeders\\": "database/seeders/"
+            "HDSSolutions\\Laravel\\": "app/",
+            "HDSSolutions\\Laravel\\Seeders\\": "database/seeders/"
         },
         "files": [
             "app/helpers.php"
@@ -26,10 +26,10 @@
     "extra": {
         "laravel": {
             "providers": [
-                "HDSSolutions\\Finpar\\CustomersModuleServiceProvider"
+                "HDSSolutions\\Laravel\\CustomersModuleServiceProvider"
             ],
             "aliases": {
-                "Customers": "HDSSolutions\\Finpar\\Customers\\Facade"
+                "Customers": "HDSSolutions\\Laravel\\Customers\\Facade"
             }
         }
     }
